<resources>
    <string name="app_name">GeoTrackShare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="find_me_on_map">Find me on Google Maps</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="altitude_label">Altitude</string>
    <string name="speed_label">Speed</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="real_time">Real Time</string>
    <string name="run_list">Run List</string>
    <string name="map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_advanced_settings">Advanced Settings</string>
    <string name="title_mode_settings">Advanced Settings</string>
    <string name="mode_settings_interval">GPS refresh interval is set for: </string>
    <string name="title_custom_settings">Custom Run Settings</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>
    <string name="import_database_local">Import Database Local</string>
    <string name="import_database_firebase">Import Database Firebase</string>
    <string name="export_import">Export Import</string>
    <string name="export_database_key">export_database_key</string>
    <string name="import_database_key">import_database_key</string>
    <string name="export_database_summary">Backup your tracks in separate sd folder. Suggested before uninstalling app.</string>
    <string name="import_database_summary">Import previously exported database. Suggested after reinstalling app</string>
    <string name="run_settings_order_by_maxspeed_label">Max speed</string>
    <string name="run_settings_order_by_avrgspeed_label">Average speed</string>
    <string name="run_settings_order_by_recent_label">ID</string>
    <string name="run_settings_order_by_maxspeed_value">max_speed</string>
    <string name="run_settings_order_by_avrgspeed_value">average_speed</string>
    <string name="run_settings_order_by_recent_value">_id</string>
    <string name="run_settings_order_by_default" translatable="false">_id</string>
    <string name="run_settings_order_by_key">_id</string>
    <string name="run_settings_order_by_label">Order</string>
    <string name="update_interval_by_1s_label">1s</string>
    <string name="update_interval_by_2s_label">2s</string>
    <string name="update_interval_by_3s_label">3s</string>
    <string name="update_interval_by_4s_label">4s</string>
    <string name="update_interval_by_5s_label">5s</string>
    <string name="update_interval_by_6s_label">6s</string>
    <string name="update_interval_by_7s_label">7s</string>
    <string name="update_interval_by_8s_label">8s</string>
    <string name="update_interval_by_9s_label">9s</string>
    <string name="update_interval_by_10s_label">10s</string>
    <string name="update_interval_by_11s_label">11s</string>
    <string name="update_interval_by_12s_label">12s</string>
    <string name="update_interval_by_13s_label">13s</string>
    <string name="update_interval_by_14s_label">14s</string>
    <string name="update_interval_by_15s_label">15s</string>
    <string name="update_interval_by_16s_label">16s</string>
    <string name="update_interval_by_17s_label">17s</string>
    <string name="update_interval_by_18s_label">18s</string>
    <string name="update_interval_by_19s_label">19s</string>
    <string name="update_interval_by_20s_label">20s</string>
    <string name="update_interval_by_25s_label">25s</string>
    <string name="update_interval_by_30s_label">30s</string>
    <string name="update_interval_by_35s_label">35s</string>
    <string name="update_interval_by_40s_label">40s</string>
    <string name="update_interval_by_50s_label">50s</string>
    <string name="update_interval_by_60s_label">60s</string>
    <string name="update_interval_by_120s_label">120s</string>
    <string name="update_interval_by_180s_label">180s</string>
    <string name="update_interval_by_1s_value">1000</string>
    <string name="update_interval_by_2s_value">2000</string>
    <string name="update_interval_by_3s_value">3000</string>
    <string name="update_interval_by_4s_value">4000</string>
    <string name="update_interval_by_5s_value">5000</string>
    <string name="update_interval_by_6s_value">6000</string>
    <string name="update_interval_by_7s_value">7000</string>
    <string name="update_interval_by_8s_value">8000</string>
    <string name="update_interval_by_9s_value">9000</string>
    <string name="update_interval_by_10s_value">10000</string>
    <string name="update_interval_by_11s_value">11000</string>
    <string name="update_interval_by_12s_value">12000</string>
    <string name="update_interval_by_13s_value">13000</string>
    <string name="update_interval_by_14s_value">14000</string>
    <string name="update_interval_by_15s_value">15000</string>
    <string name="update_interval_by_16s_value">16000</string>
    <string name="update_interval_by_17s_value">17000</string>
    <string name="update_interval_by_18s_value">18000</string>
    <string name="update_interval_by_19s_value">19000</string>
    <string name="update_interval_by_20s_value">20000</string>
    <string name="update_interval_by_25s_value">25000</string>
    <string name="update_interval_by_30s_value">30000</string>
    <string name="update_interval_by_35s_value">35000</string>
    <string name="update_interval_by_40s_value">40000</string>
    <string name="update_interval_by_50s_value">50000</string>
    <string name="update_interval_by_60s_value">60000</string>
    <string name="update_interval_by_120s_value">120000</string>
    <string name="update_interval_by_180s_value">180000</string>
    <string name="update_interval_by_default_car" translatable="false">10000</string>
    <string name="update_interval_by_default_bike" translatable="false">7000</string>
    <string name="update_interval_by_default_foot" translatable="false">4000</string>
    <string name="update_interval_by_default_ultimate" translatable="false">20000</string>
    <string name="update_interval_by_key">milliseconds</string>
    <string name="update_interval_by_label">Interval Length</string>
    <string name="delete_loops_by_5_label">5 intervals</string>
    <string name="delete_loops_by_10_label">10 intervals</string>
    <string name="delete_loops_by_15_label">15 intervals</string>
    <string name="delete_loops_by_20_label">20 intervals</string>
    <string name="delete_loops_by_25_label">25 intervals</string>
    <string name="delete_loops_by_30_label">30 intervals</string>
    <string name="delete_loops_by_35_label">35 intervals</string>
    <string name="delete_loops_by_5_value">5</string>
    <string name="delete_loops_by_10_value">10</string>
    <string name="delete_loops_by_15_value">15</string>
    <string name="delete_loops_by_20_value">20</string>
    <string name="delete_loops_by_25_value">25</string>
    <string name="delete_loops_by_30_value">30</string>
    <string name="delete_loops_by_35_value">35</string>
    <string name="delete_loops_by_default_car" translatable="false">20</string>
    <string name="delete_loops_by_default_bike" translatable="false">20</string>
    <string name="delete_loops_by_default_foot" translatable="false">20</string>
    <string name="delete_loops_by_default_ultimate" translatable="false">20</string>
    <string name="delete_loops_by_key">deleteloop</string>
    <string name="delete_loops_by_label">Intervals to Auto Stop</string>
    <string name="disable_auto_stop_switch_key">auto_stop_switch</string>
    <string name="disable_auto_stop_switch_label">Enable Auto Stop</string>
    <string name="theme_switch_key">theme_switch</string>
    <string name="theme_switch_label">Dark Mode</string>
    <string name="screen_on_switch_key">screen_on_switch</string>
    <string name="screen_on_switch_label">Screen Always On</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="importt">Import</string>
    <string name="delete_oneitem_dialog_msg">Are you sure to remove this run from favourites?</string>
    <string name="delete_one_item">Run removed from favourites</string>
    <string name="editor_insert_item_failed">Error with saving run</string>
    <string name="editor_update_item_failed">You already favor this movie</string>
    <string name="editor_insert_item_success">Run added to favourites</string>
    <string name="no_runs">Run list is empty. No backup created. You can add run by
        turning tracking button. Just record new run! </string>
    <string name="address_found">Address Found! </string>
    <string name="in_motion">…in motion…</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="Tracking_stopped_at">Tracking stopped at: </string>
    <string name="Tracking_started_at">Tracking started at: </string>
    <string name="Last_run_number">Last run No.: </string>
    <string name="Current_run">Current run No.: </string>
    <string name="Tracker_not_running">Tracker is not running. Hit the start button to start new tracking.</string>
    <string name="Tracker_is_running">Tracker is running already. Hit the stop button to stop current tracking.</string>
    <string name="Welcome_to_the_tracker">Enjoy your new tracker</string>
    <string name="Run_types">Run Types</string>
    <string name="Run_type_walk">Walk</string>
    <string name="Run_type_car">Car</string>
    <string name="Run_type_bike">Bike</string>
    <string name="Run_type_custom">Custom</string>
    <string name="Run_type_walk_desc">Travel on foot with predefined settings specified for walk</string>
    <string name="Run_type_car_desc">Travel by car with predefined settings specified for car movement</string>
    <string name="Run_type_bike_desc">Travel by bike with predefined settings specified for bike movement </string>
    <string name="Run_type_custom_desc">Travel any way you like with custom settings you can specify on your own</string>
    <string name="Run_no">Run No:</string>
    <string name="up">Up</string>
    <string name="screenshot_take_failed">Screenshot take failed</string>
</resources>