<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/title_advanced_settings">

    <CheckBoxPreference
        android:id="@+id/disable_auto_stop"
        android:key="@string/disable_auto_stop_switch_key"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:title="@string/disable_auto_stop_switch_label" />

    <ListPreference
        android:id="@+id/auto_stop"
        android:defaultValue="@string/delete_loops_by_default_ultimate"
        android:entries="@array/delete_loops_by_labels"
        android:entryValues="@array/delete_loops_by_values"
        android:key="@string/delete_loops_by_key"
        android:title="@string/delete_loops_by_label" />

    <CheckBoxPreference
        android:id="@+id/theme"
        android:key="@string/theme_switch_key"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:title="@string/theme_switch_label" />

    <CheckBoxPreference
        android:id="@+id/screen_on"
        android:key="@string/screen_on_switch_key"
        android:summaryOff="Off"
        android:summaryOn="On"
        android:title="@string/screen_on_switch_label" />

    <Preference
        android:key="@string/export_database_key"
        android:summary="@string/export_database_summary"
        android:title="@string/export_database"
        android:widgetLayout="@layout/export_button" />

    <Preference
        android:key="@string/import_database_key"
        android:summary="@string/import_database_summary"
        android:title="@string/import_database"
        android:widgetLayout="@layout/import_button" />

</PreferenceScreen>